Fixed up existing tests

--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup Label="Specify which VS-specific refs are required">
     <IsTestProject>true</IsTestProject>
+    <RequiresVCProjectEngine>true</RequiresVCProjectEngine>
   </PropertyGroup>
   <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
   <Import Project="..\EmbeddedSonarAnalyzer.props" />
