--- a/src/IssueViz/IssueViz.csproj
+++ b/src/IssueViz/IssueViz.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
     <ProjectGuid>{94130D79-3F30-47B1-9C3F-0769E57D1F4D}</ProjectGuid>
-	<RootNamespace>SonarLint.VisualStudio.IssueVisualization</RootNamespace>
+  <RootNamespace>SonarLint.VisualStudio.IssueVisualization</RootNamespace>
     <AssemblyName>SonarLint.VisualStudio.IssueVisualization</AssemblyName>
     <RequiresSigning>true</RequiresSigning>
   </PropertyGroup>
@@ -14,6 +14,22 @@
 
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
+  <ItemGroup Label="Framework references">
+    <Reference Include="System.ComponentModel.Composition" />
+    <!--<Reference Include="System.Xaml" />
+    <Reference Include="WindowsBase" />-->
+    <Reference Include="PresentationCore" />
+    <!--<Reference Include="PresentationFramework" />-->
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.CoreUtility" Version="14.0.23205" />
+    <PackageReference Include="Microsoft.VisualStudio.Editor" Version="14.0.23205" />
+    <PackageReference Include="Microsoft.VisualStudio.Shell.Immutable.14.0" Version="14.0.23205" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
