--- a/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
+++ b/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.ImageCatalog" Version="14.3.25407" />
     <PackageReference Include="Microsoft.VisualStudio.Shell.14.0" Version="14.3.25407" />
     <PackageReference Include="EnvDTE" Version="8.0.0" />
