--- a/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
+++ b/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
 
