--- a/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
+++ b/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
 
