--- a/src/IssueViz/IssueViz.csproj
+++ b/src/IssueViz/IssueViz.csproj
@@ -24,10 +24,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Commands\Resources\CommandIcons.png" />
     <None Remove="IssueVisualizationControl\IssueVisualizationControl.xaml" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Commands\Resources\CommandIcons.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.ComponentModelHost" Version="14.0.25424" />
     <PackageReference Include="Microsoft.VisualStudio.Shell.14.0" Version="14.3.25407" />
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" Version="16.7.30328.74" />
   </ItemGroup>
@@ -53,6 +59,13 @@
     <Reference Include="System.Drawing" />
     <Reference Include="WindowsBase" />
     <Reference Include="System.ComponentModel.Composition" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <VSCTCompile Include="Commands\IssueVizPackage.vsct">
+      <ResourceName>Menus.ctmenu</ResourceName>
+      <SubType>Designer</SubType>
+    </VSCTCompile>
   </ItemGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
