Move BoolToVisibilityConverter to Core

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -20,6 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="CoreStrings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
