--- a/src/Core.UnitTests/Core.UnitTests.csproj
+++ b/src/Core.UnitTests/Core.UnitTests.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Framework references">
+    <Reference Include="PresentationCore" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   
