--- a/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
+++ b/src/IssueViz.UnitTests/IssueViz.UnitTests.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\TestInfrastructure\TestInfrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="PresentationCore" />
+  </ItemGroup>
+
 </Project>
