--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle" Version="1.8.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="6.0.8" />
     <PackageReference Include="System.IO.Abstractions" Version="7.1.10" />
   </ItemGroup>
