Add versioned Microsoft.VisualStudio.Shell

--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup Label="Specify which VS-specific refs are required">
     <IsTestProject>true</IsTestProject>
     <RequiresVCProjectEngine>true</RequiresVCProjectEngine>
+    <RequiresShell>true</RequiresShell>
   </PropertyGroup>
   <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
   <Import Project="..\EmbeddedSonarAnalyzer.props" />
