--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -74,6 +74,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Framework references">
+    <Reference Include="Microsoft.Build" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
