--- a/src/IssueViz.Security/IssueViz.Security.csproj
+++ b/src/IssueViz.Security/IssueViz.Security.csproj
@@ -9,6 +9,15 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <!-- Hack to prevent VS2017 from automatically attempting to upgrade the project -->
+    <MinimumVisualStudioVersion>$(VisualStudioVersion)</MinimumVisualStudioVersion>
+    <RequiresShell>true</RequiresShell>
+  </PropertyGroup>
+
+  <!-- This project references the Microsoft.VisualStudio.Shell assembly which is VS-version specific -->
+  <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
+
+  <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
     <ProjectGuid>{8D0D5AF0-D5B7-41ED-9EC6-9E10C66B37E0}</ProjectGuid>
     <RootNamespace>SonarLint.VisualStudio.IssueVisualization.Security</RootNamespace>
@@ -36,6 +45,7 @@
   <ItemGroup Label="Package references">
     <PackageReference Include="Microsoft.VisualStudio.ComponentModelHost" Version="14.0.25424" />
     <PackageReference Include="Microsoft.VisualStudio.Language.Intellisense" Version="14.0.23205" />
+    <PackageReference Include="Microsoft.VisualStudio.Shell.14.0" Version="14.3.25407" />
   </ItemGroup>
 
   <ItemGroup Label="Project references">
