--- a/src/SonarLint.VSSpecificAssemblies.props
+++ b/src/SonarLint.VSSpecificAssemblies.props
@@ -157,7 +157,7 @@
   <!-- ******************************************************************************* -->
   <!-- Microsoft.VisualStudio.Shell assembly -->
   <!-- ******************************************************************************* -->
-  <ItemGroup Label="Shell versioned references" Condition="$(RequiresShell)=='true' AND '$(VsTargetVersion)'=='2015'">
+  <ItemGroup Label="Shell versioned references" Condition="$(RequiresVersionSpecificShell)=='true' AND '$(VsTargetVersion)'=='2015'">
     <PackageReference Include="Microsoft.VisualStudio.Shell.14.0"
                       Version="14.3.25407"
                       GeneratePathProperty="true"
@@ -166,10 +166,10 @@
     </PackageReference>
     <ReferencePath Include="$(NuGetPackageRoot)\Microsoft.VisualStudio.Shell.14.0\14.3.25407\lib\Microsoft.VisualStudio.Shell.14.0.dll">
       <Private>$(CopyVSAssembliesToOutput)</Private>
-      <Aliases>global, shell</Aliases>
+      <Aliases>global, versionSpecificShell</Aliases>
     </ReferencePath>
   </ItemGroup>
-  <ItemGroup Label="Shell versioned references" Condition="$(RequiresShell)=='true' AND '$(VsTargetVersion)'!='2015'">
+  <ItemGroup Label="Shell versioned references" Condition="$(RequiresVersionSpecificShell)=='true' AND '$(VsTargetVersion)'!='2015'">
     <PackageReference Include="Microsoft.VisualStudio.Shell.15.0"
                       Version="15.0.26201"
                       GeneratePathProperty="true"
@@ -178,7 +178,7 @@
     </PackageReference>
     <ReferencePath Include="$(NuGetPackageRoot)\Microsoft.VisualStudio.Shell.15.0\15.0.26201\lib\Microsoft.VisualStudio.Shell.15.0.dll">
       <Private>$(CopyVSAssembliesToOutput)</Private>
-      <Aliases>shell</Aliases>
+      <Aliases>versionSpecificShell</Aliases>
     </ReferencePath>
   </ItemGroup>
 
